fixed overflow issue for mobile

--- a/styles/scss/_portfolio.scss
+++ b/styles/scss/_portfolio.scss
@@ -12,6 +12,7 @@
     justify-content: center;
     align-items: center;
     background-color: $lighter;
+    overflow: hidden;
     .imageContainer {
         width: 50%;
         img {
